build: fix lint config for spec files

--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -57,8 +57,8 @@
         "test": "mocha --config ../../.mocharc.yml",
         "test:watch": "mocha --config ../../.mocharc.yml --watch",
         "test:coverage": "nyc --nycrc-path ../../.nycrc.json npm run test",
-        "lint": "tslint -c tslint.json -p tsconfig.json src/**/*.ts",
-        "lint:fix": "tslint --fix -c tslint.json -p tsconfig.json src/**/*.ts",
+        "lint": "tslint -c tslint.json -p tsconfig.lint.json src/**/*.ts",
+        "lint:fix": "tslint --fix -c tslint.json -p tsconfig.lint.json src/**/*.ts",
         "docs": "typedoc --options ../../typedoc.json"
     }
 }
