--- a/packages/api-types/tsconfig.lint.json
+++ b/packages/api-types/tsconfig.lint.json
@@ -1,10 +1,13 @@
 {
-    "extends": "../../tsconfig.json",
+    "extends": "../../tsconfig.lint.json",
     "compilerOptions": {
         "outDir": "./dist",
         "rootDir": "./src"
     },
     "include": [
         "./src"
+    ],
+    "exclude": [
+        "node_modules"
     ],
 }
