--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,20 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.1.1"
+  "version": "0.1.1",
+  "command": {
+    "publish": {
+      "ignoreChanges": [
+        "ignored-file",
+        "*.md",
+        "tslint.json",
+        "tsconfig.json"
+      ],
+      "message": "chore(release): publish %s"
+    },
+    "version": {
+      "conventionalCommits": true,
+      "message": "chore(release): publish %s"
+    }
+  }
 }
