--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -49,6 +49,7 @@
     },
     "dependencies": {
         "@abfluss/api-types": "^0.1.1",
+        "@abfluss/util": "^0.1.0",
         "jsonschema": "~1.2.4",
         "request": "~2.88.0",
         "request-promise-native": "~1.0.7"
