--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,6 +51,7 @@
         "@abfluss/api-types": "~0.2.0",
         "@abfluss/util": "~0.2.0",
         "@types/yargs": "~13.0.3",
+        "chalk": "^3.0.0",
         "yargs": "~14.2.0"
     },
     "files": [
