--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -44,6 +44,7 @@
         "sinon": "~7.5.0",
         "ts-node": "~8.4.1",
         "tslint": "~5.20.0",
+        "typedoc": "^0.16.11",
         "typescript": "~3.6.4"
     },
     "dependencies": {
