--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -53,6 +53,7 @@
         "@abfluss/util": "~0.2.0",
         "@types/yargs": "~15.0.4",
         "chalk": "^3.0.0",
+        "inquirer": "^7.1.0",
         "yargs": "~15.3.0"
     },
     "files": [
