--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "@types/chai": "~4.2.4",
+        "@types/inquirer": "^6.5.0",
         "@types/mocha": "~5.2.7",
         "@types/node": "~13.9.1",
         "@types/set-cookie-parser": "~0.0.5",
