--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -56,6 +56,7 @@
         "chalk": "^3.0.0",
         "commander": "^4.1.1",
         "inquirer": "^7.1.0",
+        "rxjs": "^6.5.4",
         "yargs": "~15.3.0"
     },
     "files": [
