--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,19 +12,26 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - name: Setup Cache
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - name: Install Deps
         run: |
           npm ci
-          npx lerna bootstrap
+          npx lerna bootstrap --ci
       - name: Run Build
         run: npm run build
       - name: Run Test
-        run: npm run test:coverage
+        run: npm run test:coverage --no-sort
       - name: Upload coverage to Codecov
         run: ./codecov_upload.sh
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       - name: Run Lint
-        run: npm run lint
+        run: npm run lint --no-sort
       - name: Run Docs
-        run: npm run docs
+        run: npm run docs --no-sort
