--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "commitizen": "^4.0.4",
     "conventional-changelog-eslint": "^3.0.4",
+    "cz-conventional-changelog": "^3.1.0",
     "lerna": "^3.20.2"
   },
   "scripts": {
@@ -39,5 +41,10 @@
     "sourceMap": true,
     "instrument": true,
     "all": true
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
