--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,7 +33,7 @@
     },
     "devDependencies": {
         "@types/chai": "~4.2.11",
-        "@types/mocha": "~5.2.7",
+        "@types/mocha": "~7.0.2",
         "@types/node": "~13.11.1",
         "@types/set-cookie-parser": "~0.0.5",
         "@types/sinon": "~9.0.0",
@@ -43,16 +43,16 @@
         "request-debug": "~0.2.0",
         "sinon": "~9.0.2",
         "ts-node": "~8.8.2",
-        "tslint": "~5.20.0",
-        "typedoc": "^0.16.11",
-        "typescript": "~3.6.4"
+        "tslint": "~6.1.0",
+        "typedoc": "~0.16.11",
+        "typescript": "~3.8.3"
     },
     "dependencies": {
         "@abfluss/api-client": "~0.2.0",
         "@abfluss/api-types": "~0.2.0",
         "@abfluss/util": "~0.2.0",
         "@types/yargs": "~15.0.4",
-        "chalk": "^4.0.0",
+        "chalk": "~4.0.0",
         "yargs": "~15.3.1"
     },
     "files": [
