--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "commitizen": "^4.0.4",
-    "conventional-changelog-eslint": "^3.0.4",
-    "cz-conventional-changelog": "^3.1.0",
-    "lerna": "^3.20.2"
+    "@types/chai": "~4.2.11",
+    "@types/mocha": "~7.0.2",
+    "@types/node": "~13.11.1",
+    "@types/sinon": "~9.0.0",
+    "commitizen": "~4.0.4",
+    "conventional-changelog-eslint": "~3.0.4",
+    "cz-conventional-changelog": "~3.1.0",
+    "lerna": "~3.20.2"
   },
   "scripts": {
     "build": "lerna run build",
