--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@abfluss/cli",
-    "version": "0.1.0",
+    "version": "0.2.1",
     "description": "Cli for FlowApi",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -44,9 +44,9 @@
         "typescript": "~3.8.3"
     },
     "dependencies": {
-        "@abfluss/api-client": "~0.2.0",
-        "@abfluss/api-types": "~0.2.0",
-        "@abfluss/util": "~0.2.0",
+        "@abfluss/api-client": "^0.2.1",
+        "@abfluss/api-types": "^0.2.1",
+        "@abfluss/util": "^0.2.1",
         "chalk": "~4.0.0",
         "yargs": "~15.3.1"
     },
