--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -2,8 +2,9 @@
     "name": "@abfluss/api-types",
     "version": "0.2.2",
     "description": "Api Types and helper for FlowApi",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "dist/cjs/index.js",
+    "module": "dist/esm/index.js",
+    "types": "dist/types/index.d.ts",
     "private": false,
     "keywords": [
         "flow",
@@ -49,7 +50,10 @@
         "src/*"
     ],
     "scripts": {
-        "build": "tsc",
+        "build": "npm run build:esm && npm run build:cjs && npm run build:types",
+        "build:esm": "tsc --project ./tsconfig.json --module es2015 --outDir dist/esm",
+        "build:cjs": "tsc --project ./tsconfig.json --module commonjs --outDir dist/cjs",
+        "build:types": "tsc --project ./tsconfig.json  -d --declarationDir dist/types --declarationMap --emitDeclarationOnly",
         "test": "mocha --config ../../.mocharc.yml",
         "test:watch": "mocha --config ../../.mocharc.yml --watch",
         "test:coverage": "nyc --nycrc-path ../../.nycrc.json npm run test",
