--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "sourceMap": true,
         "outDir": "./dist",
         "rootDir": "./src",
-        "declaration": true,
+        "declaration": false,
         "moduleResolution": "node",
         "strictNullChecks": true,
         "noUnusedLocals": true
