--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,67 +1,68 @@
 {
-    "name": "@abfluss/cli",
-    "version": "0.2.3",
-    "description": "Cli for FlowApi",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "private": false,
-    "keywords": [
-        "flow",
-        "polar",
-        "api",
-        "types"
-    ],
-    "homepage": "https://abfluss.github.io/abfluss/",
-    "author": {
-        "name": "donmahallem",
-        "email": "donmahallem@users.noreply.github.com",
-        "url": "https://github.com/donmahallem"
-    },
-    "license": "Apache-2.0",
-    "bugs": {
-        "url": "https://github.com/abfluss/abfluss/issues"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/abfluss/abfluss.git"
-    },
-    "engines": {
-        "node": ">=10.0.0"
-    },
-    "publishConfig": {
-        "access": "public"
-    },
-    "devDependencies": {
-        "@types/yargs": "~15.0.5",
-        "chai": "~4.2.0",
-        "mocha": "~8.0.1",
-        "nyc": "~15.1.0",
-        "request-debug": "~0.2.0",
-        "sinon": "~9.0.2",
-        "ts-node": "~8.10.2",
-        "tslint": "~6.1.2",
-        "typedoc": "~0.17.8",
-        "typescript": "~3.9.5"
-    },
-    "dependencies": {
-        "@abfluss/api-client": "^0.2.3",
-        "@abfluss/api-types": "^0.2.3",
-        "@abfluss/util": "^0.2.3",
-        "chalk": "~4.1.0",
-        "inquirer": "^7.3.2",
-        "yargs": "~15.3.1"
-    },
-    "files": [
-        "dist/*",
-        "src/*"
-    ],
-    "scripts": {
-        "build": "tsc",
-        "test": "mocha --config ../../.mocharc.yml",
-        "test:watch": "mocha --config ../../.mocharc.yml --watch",
-        "test:coverage": "nyc --nycrc-path ../../.nycrc.json npm run test",
-        "lint": "tslint -c tslint.json -p tsconfig.lint.json src/**/*.ts",
-        "lint:fix": "tslint --fix -c tslint.json -p tsconfig.lint.json src/**/*.ts",
-        "docs": "typedoc --options ../../typedoc.json"
-    }
+	"name": "@abfluss/cli",
+	"version": "0.2.3",
+	"description": "Cli for FlowApi",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"private": false,
+	"keywords": [
+		"flow",
+		"polar",
+		"api",
+		"types"
+	],
+	"homepage": "https://abfluss.github.io/abfluss/",
+	"author": {
+		"name": "donmahallem",
+		"email": "donmahallem@users.noreply.github.com",
+		"url": "https://github.com/donmahallem"
+	},
+	"license": "Apache-2.0",
+	"bugs": {
+		"url": "https://github.com/abfluss/abfluss/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/abfluss/abfluss.git"
+	},
+	"engines": {
+		"node": ">=10.0.0"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"devDependencies": {
+		"@types/inquirer": "~6.5.0",
+		"@types/yargs": "~15.0.5",
+		"chai": "~4.2.0",
+		"mocha": "~8.0.1",
+		"nyc": "~15.1.0",
+		"request-debug": "~0.2.0",
+		"sinon": "~9.0.2",
+		"ts-node": "~8.10.2",
+		"tslint": "~6.1.2",
+		"typedoc": "~0.17.8",
+		"typescript": "~3.9.5"
+	},
+	"dependencies": {
+		"@abfluss/api-client": "^0.2.3",
+		"@abfluss/api-types": "^0.2.3",
+		"@abfluss/util": "^0.2.3",
+		"chalk": "~4.1.0",
+		"inquirer": "~7.3.2",
+		"yargs": "~15.3.1"
+	},
+	"files": [
+		"dist/*",
+		"src/*"
+	],
+	"scripts": {
+		"build": "tsc",
+		"test": "mocha --config ../../.mocharc.yml",
+		"test:watch": "mocha --config ../../.mocharc.yml --watch",
+		"test:coverage": "nyc --nycrc-path ../../.nycrc.json npm run test",
+		"lint": "tslint -c tslint.json -p tsconfig.lint.json src/**/*.ts",
+		"lint:fix": "tslint --fix -c tslint.json -p tsconfig.lint.json src/**/*.ts",
+		"docs": "typedoc --options ../../typedoc.json"
+	}
 }
