--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "conventional-changelog-eslint": "~3.0.9",
     "cz-conventional-changelog": "~3.3.0",
     "lerna": "~3.22.1",
-    "typedoc": "^0.20.14"
+    "typedoc": "~0.20.14",
+    "typescript": "~4.1.3"
   },
   "scripts": {
     "build": "lerna run build",
