--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,8 +39,7 @@
         "request-debug": "~0.2.0",
         "sinon": "~9.2.3",
         "ts-node": "~9.1.1",
-        "tslint": "~6.1.3",
-        "typescript": "~4.0.5"
+        "tslint": "~6.1.3"
     },
     "dependencies": {
         "@abfluss/api-client": "^0.2.3",
