--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "commitizen": "~4.2.2",
     "conventional-changelog-eslint": "~3.0.9",
     "cz-conventional-changelog": "~3.3.0",
-    "lerna": "~3.22.1"
+    "lerna": "~3.22.1",
+    "typedoc": "~0.20.14",
+    "typescript": "~4.1.3"
   },
   "scripts": {
     "build": "lerna run build",
