--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -40,9 +40,7 @@
         "nyc": "~15.1.0",
         "sinon": "~9.2.3",
         "ts-node": "~9.1.1",
-        "tslint": "~6.1.3",
-        "typedoc": "~0.19.2",
-        "typescript": "~4.0.5"
+        "tslint": "~6.1.3"
     },
     "dependencies": {
         "@abfluss/api-types": "^0.2.3",
