--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,36 +3,6 @@
         "dev"
     ],
     "extends": [
-        "config:base"
-    ],
-    "packageRules": [
-        {
-            "depTypeList": [
-                "devDependencies"
-            ],
-            "automerge": true
-        },
-        {
-            "depTypeList": [
-                "dependencies"
-            ],
-            "updateTypes": [
-                "minor",
-                "patch",
-                "pin",
-                "digest",
-                "lockFileMaintenance",
-                "rollback",
-                "bump"
-            ],
-            "automerge": true
-        },
-        {
-            "depTypeList": [
-                "peerDependencies"
-            ],
-            "automerge": true,
-            "rangeStrategy": "replace"
-        }
+        "@donmahallem"
     ]
 }
