--- a/.mergify.yml
+++ b/.mergify.yml
@@ -13,4 +13,16 @@ pull_request_rules:
       - -head~=^(master|dev)$
       - -author~=^dependabot(|-preview)\[bot\]$
     actions:
+      label:
+        remove:
+          - ready-to-merge
       delete_head_branch:
+  - name: merge PRs labeled ready-to-merge
+    conditions:
+      - status-success=Finish Test
+      - label=ready-to-merge
+    actions:
+      merge:
+        method: squash
+        strict: smart+fasttrack
+        strict_method: merge
