--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "ES2018",
         "module": "commonjs",
+        "esModuleInterop": true,
         "sourceMap": true,
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "declaration": false,
+        "declaration": true,
         "moduleResolution": "node",
         "strictNullChecks": true,
         "noUnusedLocals": true
