--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -34,13 +34,7 @@
     },
     "devDependencies": {
         "@types/request": "2.48.5",
-        "@types/request-promise-native": "1.0.17",
-        "chai": "4.3.4",
-        "mocha": "8.3.2",
-        "nyc": "15.1.0",
-        "sinon": "10.0.0",
-        "ts-node": "9.1.1",
-        "tslint": "6.1.3"
+        "@types/request-promise-native": "1.0.17"
     },
     "dependencies": {
         "@abfluss/api-types": "^0.2.5",
