--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,13 +33,7 @@
     },
     "devDependencies": {
         "@types/yargs": "16.0.0",
-        "chai": "4.3.4",
-        "mocha": "8.3.2",
-        "nyc": "15.1.0",
-        "request-debug": "0.2.0",
-        "sinon": "10.0.0",
-        "ts-node": "9.1.1",
-        "tslint": "6.1.3"
+        "request-debug": "0.2.0"
     },
     "dependencies": {
         "@abfluss/api-client": "^0.2.5",
