--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
     "sinon": "^10.0.0",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typedoc": "0.20.33",
     "typescript": "4.2.3"
