--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "@types/mocha": "8.2.2",
     "@types/node": "14.14.35",
     "@types/sinon": "9.0.11",
+    "chai": "^4.3.4",
     "commitizen": "4.2.3",
     "conventional-changelog-angular": "5.0.12",
     "cz-conventional-changelog": "3.3.0",
     "lerna": "4.0.0",
+    "mocha": "^8.3.2",
+    "nyc": "^15.1.0",
+    "sinon": "^10.0.0",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
     "typedoc": "0.20.33",
     "typescript": "4.2.3"
   },
