chore: fix typedoc build script

--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -55,7 +55,7 @@
         "test:coverage": "nyc --nycrc-path ../../.nycrc.json npm run test",
         "lint": "tslint -c tslint.json -p tsconfig.lint.json src/**/*.ts",
         "lint:fix": "tslint --fix -c tslint.json -p tsconfig.lint.json src/**/*.ts",
-        "docs": "typedoc --options ../../typedoc.json"
+        "docs": "typedoc --options ./typedoc.config.js"
     },
     "devDependencies": {
         "@types/qs": "6.9.6",
