--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -53,6 +53,6 @@
         "test:coverage": "nyc --nycrc-path ../../.nycrc.json npm run test",
         "lint": "tslint -c tslint.json -p tsconfig.lint.json src/**/*.ts",
         "lint:fix": "tslint --fix -c tslint.json -p tsconfig.lint.json src/**/*.ts",
-        "docs": "typedoc --options ../../typedoc.json"
+        "docs": "typedoc --options ./typedoc.config.js"
     }
 }
