--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@donmahallem/eslint-config": "0.2.0",
     "@donmahallem/tslint-config": "0.1.3",
     "@types/chai": "4.2.21",
     "@types/mocha": "9.0.0",
