chore: fix setup

--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -41,8 +41,8 @@
     ],
     "scripts": {
         "build": "npm run build:esm && npm run build:cjs && npm run build:types",
-        "build:esm": "tsc --project ./tsconfig.json --module es2015 --outDir dist/esm",
-        "build:cjs": "tsc --project ./tsconfig.json --module commonjs --outDir dist/cjs",
+        "build:esm": "tsc --project ./tsconfig.app.json --module es2015 --outDir dist/esm",
+        "build:cjs": "tsc --project ./tsconfig.app.json --module commonjs --outDir dist/cjs",
         "build:types": "tsc --project ./tsconfig.json  -d --declarationDir dist/types --declarationMap --emitDeclarationOnly",
         "test": "mocha --config ../../.mocharc.yml",
         "test:watch": "mocha --config ../../.mocharc.yml --watch",
