fix(util): fix tsconfig circular dependency

--- a/packages/util/tsconfig.app.json
+++ b/packages/util/tsconfig.app.json
@@ -1,5 +1,10 @@
 {
-    "extends": "./tsconfig.app.json",
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "declaration": false,
+    },
     "exclude": [
         "./src/**/*.spec.ts"
     ],
