--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -41,7 +41,7 @@
     ],
     "scripts": {
         "build": "npm run build:esm && npm run build:cjs && npm run build:types",
-        "build:esm": "tsc --project ./tsconfig.json --module es2015 --outDir dist/esm",
+        "build:esm": "tsc --project ./tsconfig.json --module esnext --outDir dist/esm",
         "build:cjs": "tsc --project ./tsconfig.json --module commonjs --outDir dist/cjs",
         "build:types": "tsc --project ./tsconfig.json  -d --declarationDir dist/types --declarationMap --emitDeclarationOnly",
         "test": "mocha --config ../../.mocharc.yml",
