--- a/.github/workflows/label_package_pr.yml
+++ b/.github/workflows/label_package_pr.yml
@@ -17,3 +17,7 @@ jobs:
         with:
           github_secret: "${{ secrets.GITHUB_TOKEN }}"
           prefix: "pkg"
+      - name: Label PRs
+        uses: actions/labeler@v3
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
