--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,12 +1,17 @@
-pull_request_rules:
-  - name: automatic merge dependabot PRs into dev
+queue_rules:
+  - name: default
     conditions:
-      - author~=^dependabot(|-preview)\[bot\]$
-      - status-success=Test
-      - base=dev
+      # Conditions to get out of the queue (= merged)
+      - check-success=Finish Test
+pull_request_rules:
+  - name: merge PRs labeled ready-to-merge
+    conditions:
+      - status-success=Finish Test
+      - label=ready-to-merge
     actions:
-      merge:
+      queue:
         method: squash
+        name: default
   - name: delete head branch on merged pull requests
     conditions:
       - merged
@@ -17,12 +22,3 @@ pull_request_rules:
         remove:
           - ready-to-merge
       delete_head_branch:
-  - name: merge PRs labeled ready-to-merge
-    conditions:
-      - status-success=Finish Test
-      - label=ready-to-merge
-    actions:
-      merge:
-        method: squash
-        strict: smart+fasttrack
-        strict_method: merge
